[package]
name = "filterer"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[[example]]
name = "filterer"
required-features = ["readline"]

[dependencies]
regex = "1"
nom = "7.0"
rustyline = { version = "9.0", optional = true }

[features]
readline = ["rustyline"]
