[package]
name = "filterer"
version = "0.1.0"
edition = "2018"

[[example]]
name = "filterer"
required-features = ["readline"]

[[bin]]
name = "fuzz"
required-features = ["fuzz"]

[dependencies]
regex = "1"
nom = "7.0"
rustyline = { version = "9.0", optional = true }
afl = { version = "*", optional = true }

[features]
readline = ["rustyline"]
fuzz = ["afl"]

[profile.release]
lto = true
debug = true
panic = "abort"
