[package]
name = "filterer"
version = "0.2.4"
edition = "2021"
license = "MIT"

[[example]]
name = "filterer"
required-features = ["readline"]

[[bin]]
name = "fuzz"
required-features = ["fuzz"]

[dependencies]
regex = "1"
nom = "7.0"
rustyline = { version = "9.0", optional = true }
afl = { version = "*", optional = true }
smallvec = "1.10.0"

[features]
readline = ["rustyline"]
fuzz = ["afl"]

[profile.release]
lto = true
debug = true
panic = "abort"
